--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.74.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-sqlite": "~14.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
